# CTF-Tool-hash-break-miniJohn-C

./: CMakeLists.txt  LICENSE  README.md  brute.cpp  dictionary.cpp
include/: MD5.h  SHA1.h  SHA256.h  SHA512.h  include_hashes.h
test/: basic_test_framework.h  testing.cpp
